News UAT/force-app/main/default/objects/Campaign_Response__c/Campaign_Response__c.object-meta.xml
<CustomObject>
    <description>Custom Object to store individual Campaign Responses by a Campaign Member.

Also serves as an integration object to Marketo.</description>
    <label>Campaign Response</label>
    <nameField>
        <displayFormat>CmpR-{0000}</displayFormat>
        <label>Campaign Response Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Campaign Responses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>