News UAT/force-app/main/default/objects/Campaign_Response__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Related account from the contact.</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Campaign Responses</relationshipLabel>
    <relationshipName>Campaign_Responses</relationshipName>
    <type>Lookup</type>
</CustomField>