News UAT/force-app/main/default/objects/Campaign_Response__c/fields/Call_Attempt__c.field-meta.xml
<CustomField>
    <fullName>Call_Attempt__c</fullName>
    <label>Call Attempt #</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>