News UAT/force-app/main/default/objects/Campaign_Response__c/fields/Call_Back_Date__c.field-meta.xml
<CustomField>
    <fullName>Call_Back_Date__c</fullName>
    <description>Date to call customer back - only allowed for Response Subtypes of &#39;Call Back Same Agent&#39; or &#39;Call Back Any Agent&#39;</description>
    <inlineHelpText>Validated against Response Type and Response Subtype</inlineHelpText>
    <label>Call Back Date</label>
    <type>DateTime</type>
</CustomField>