News UAT/force-app/main/default/objects/Campaign_Response__c/fields/Call_Back_Reminder__c.field-meta.xml
<CustomField>
    <fullName>Call_Back_Reminder__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Validated to only allow a Call Reminder if Response Subtype is Call Back Same Agent. 
The Agent who has locked the member (as part of call back process) will receive the reminder.</description>
    <inlineHelpText>Select to receive an email reminder to call the person back. Only allowed if Response is &#39;Call Back Same Agent&#39;</inlineHelpText>
    <label>Call Back Reminder</label>
    <type>Checkbox</type>
</CustomField>