News UAT/force-app/main/default/objects/Campaign_Response__c/fields/Call_Limit_Reached__c.field-meta.xml
<CustomField>
    <fullName>Call_Limit_Reached__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set automatically when the Campaign&#39;s Call Limit is hit by this response</description>
    <label>Call Limit Reached</label>
    <type>Checkbox</type>
</CustomField>