News UAT/force-app/main/default/objects/Campaign_Response__c/fields/Campaign_Member_First_Associated_Date__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Member_First_Associated_Date__c</fullName>
    <description>Value that holds the Campaign Member&#39;s creation date.</description>
    <label>Campaign Member First Associated Date</label>
    <type>DateTime</type>
</CustomField>