News UAT/force-app/main/default/objects/Campaign_Response__c/fields/Campaign_Member_Id__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Member_Id__c</fullName>
    <description>Indirect link to Campaign Member object.

It is not possible to create a Look up relationship to Campaign Member object.</description>
    <label>Campaign Member Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>