News UAT/force-app/main/default/objects/Campaign_Response__c/fields/Campaign_Pillar__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Pillar__c</fullName>
    <formula>TEXT(Campaign__r.Campaign_Pillar__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Campaign Pillar</label>
    <type>Text</type>
</CustomField>