News UAT/force-app/main/default/objects/Campaign_Response__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Campaign Responses</relationshipLabel>
    <relationshipName>Campaign_Responses</relationshipName>
    <type>Lookup</type>
</CustomField>