News UAT/force-app/main/default/objects/Campaign_Response__c/fields/Contact_Plan_Ad_Type__c.field-meta.xml
<CustomField>
    <fullName>Contact_Plan_Ad_Type__c</fullName>
    <label>Contact Plan Ad Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Classifieds</fullName>
            </value>
            <value>
                <fullName>Display</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>