News UAT/force-app/main/default/objects/Campaign_Response__c/fields/Contact_Plan_Cancelled__c.field-meta.xml
<CustomField>
    <fullName>Contact_Plan_Cancelled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to mark a Contact Plan as Cancelled</description>
    <label>Contact Plan Cancelled</label>
    <type>Checkbox</type>
</CustomField>