News UAT/force-app/main/default/objects/Campaign_Response__c/fields/Contact_Plan_Date__c.field-meta.xml
<CustomField>
    <fullName>Contact_Plan_Date__c</fullName>
    <label>Contact Plan Date</label>
    <type>Date</type>
</CustomField>