News UAT/force-app/main/default/objects/Campaign_Response__c/fields/Contact_Plan_Publication_Divisions__c.field-meta.xml
<CustomField>
    <fullName>Contact_Plan_Publication_Divisions__c</fullName>
    <description>Critical for Sales Order Segmentation in Marketo</description>
    <label>Contact Plan Publication Divisions</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>NMG</fullName>
            </value>
            <value>
                <fullName>PST</fullName>
            </value>
            <value>
                <fullName>CNS</fullName>
            </value>
            <value>
                <fullName>DBL</fullName>
            </value>
            <value>
                <fullName>National</fullName>
            </value>
            <value>
                <fullName>MNG</fullName>
            </value>
            <value>
                <fullName>GCP</fullName>
            </value>
            <value>
                <fullName>QNP</fullName>
            </value>
            <value>
                <fullName>NWN</fullName>
            </value>
            <value>
                <fullName>QST</fullName>
            </value>
            <value>
                <fullName>CNG</fullName>
            </value>
            <value>
                <fullName>HWT</fullName>
            </value>
            <value>
                <fullName>ADN</fullName>
            </value>
            <value>
                <fullName>LDR</fullName>
            </value>
            <value>
                <fullName>GAD</fullName>
            </value>
            <value>
                <fullName>NQN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>