News UAT/force-app/main/default/objects/Campaign_Response__c/fields/Decision_Maker_Reached__c.field-meta.xml
<CustomField>
    <fullName>Decision_Maker_Reached__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Decision Maker Reached</label>
    <type>Checkbox</type>
</CustomField>