News UAT/force-app/main/default/objects/Campaign_Response__c/fields/Member_Name__c.field-meta.xml
<CustomField>
    <fullName>Member_Name__c</fullName>
    <description>Extract the name of the Lead or Contact</description>
    <formula>IF(
  ISBLANK( Lead__c ), 
  Contact__r.FirstName + &#39; &#39; + Contact__r.LastName,
  Lead__r.FirstName + &#39; &#39; + Lead__r.LastName
)</formula>
    <label>Member Name</label>
    <type>Text</type>
</CustomField>