News UAT/force-app/main/default/objects/Campaign_Response__c/fields/Membership_Final_Response__c.field-meta.xml
<CustomField>
    <fullName>Membership_Final_Response__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Denote whether the Response was the concluding response - Yes or No. This is relevant for Retention campaigns.</description>
    <inlineHelpText>Denote whether the Response was the concluding response - Yes or No. This is relevant for Retention campaigns.</inlineHelpText>
    <label>Membership Final Response</label>
    <type>Checkbox</type>
</CustomField>