News UAT/force-app/main/default/objects/Campaign_Response__c/fields/Response_Comment__c.field-meta.xml
<CustomField>
    <fullName>Response_Comment__c</fullName>
    <label>Response Comment</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>