News UAT/force-app/main/default/objects/Campaign_Response__c/fields/Response_Subtype__c.field-meta.xml
<CustomField>
    <fullName>Response_Subtype__c</fullName>
    <label>Response Subtype</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Response_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Achieved Initial Objective</fullName>
            </value>
            <value>
                <fullName>Already Booked</fullName>
            </value>
            <value>
                <fullName>Awaiting Decision</fullName>
            </value>
            <value>
                <fullName>Booking Error</fullName>
            </value>
            <value>
                <fullName>Build/Maintain Presence and Branding</fullName>
            </value>
            <value>
                <fullName>CRR Complaint/Credit status</fullName>
            </value>
            <value>
                <fullName>Decision Maker Unavailable</fullName>
            </value>
            <value>
                <fullName>Disconnected/Wrong Number</fullName>
            </value>
            <value>
                <fullName>Duped Record</fullName>
            </value>
            <value>
                <fullName>FSAM</fullName>
            </value>
            <value>
                <fullName>Future Contact Scheduled</fullName>
            </value>
            <value>
                <fullName>Growing Business/New Product or Service</fullName>
            </value>
            <value>
                <fullName>Lead to ADM</fullName>
            </value>
            <value>
                <fullName>Lead to ADM and Opt In</fullName>
            </value>
            <value>
                <fullName>Lead to Telemarketing</fullName>
            </value>
            <value>
                <fullName>No ROI</fullName>
            </value>
            <value>
                <fullName>Opportunity Created</fullName>
            </value>
            <value>
                <fullName>Opt In</fullName>
            </value>
            <value>
                <fullName>Opt Out From Further Contact</fullName>
            </value>
            <value>
                <fullName>Out of Business</fullName>
            </value>
            <value>
                <fullName>Request Call Back - Same Agent</fullName>
            </value>
            <value>
                <fullName>Short Term Objective</fullName>
            </value>
            <value>
                <fullName>Unhappy With Price</fullName>
            </value>
            <value>
                <fullName>Unhappy With Product</fullName>
            </value>
            <value>
                <fullName>Unhappy With Service</fullName>
            </value>
            <value>
                <fullName>Unsuitable Lead</fullName>
            </value>
            <value>
                <fullName>Will Attend</fullName>
            </value>
            <value>
                <fullName>Will Not Attend</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>