News UAT/force-app/main/default/objects/Campaign_Response__c/validationRules/Contact_Plan_Incomplete.validationRule-meta.xml
<ValidationRule>
    <fullName>Contact_Plan_Incomplete</fullName>
    <active>true</active>
    <description>All 3 Contact Plan values must be provided.</description>
    <errorConditionFormula>OR(

AND(
  NOT(ISBLANK( Contact_Plan_Date__c )),
  OR(
    ISPICKVAL(Contact_Plan_Ad_Type__c, &#39;&#39; ),
    ISBLANK(  Contact_Plan_Publication_Divisions__c )
  )
),

AND(
  NOT(ISBLANK( Contact_Plan_Publication_Divisions__c )),
  OR(
    ISPICKVAL(Contact_Plan_Ad_Type__c, &#39;&#39; ),
    ISBLANK(  Contact_Plan_Date__c )
  )
),

AND(
  NOT(ISPICKVAL(Contact_Plan_Ad_Type__c, &#39;&#39; )),
  OR(
    ISBLANK( Contact_Plan_Date__c ),
    ISBLANK(  Contact_Plan_Publication_Divisions__c )
  )
)


)</errorConditionFormula>
    <errorMessage>All Contact Plan details must be provided when setting the Contact Plan</errorMessage>
</ValidationRule>