News UAT/force-app/main/default/objects/Campaign_Response__c/validationRules/CpgnRes_CallBackDate_Validate.validationRule-meta.xml
<ValidationRule>
    <fullName>CpgnRes_CallBackDate_Validate</fullName>
    <active>true</active>
    <description>The Call Back Date can only be provided if the Response Type is Follow Up - the value that a Call Back date relevant to.</description>
    <errorConditionFormula>AND( 
OR((ISPICKVAL(Response_Type__c, &#39;Yes&#39;)),(ISPICKVAL(Response_Type__c, &#39;No&#39;)),(ISPICKVAL(Response_Type__c, &#39;No Sales Call&#39;)), 
(ISPICKVAL(Response_Type__c, &#39;&#39;))), 
NOT( ISBLANK( Call_Back_Date__c )) 
)</errorConditionFormula>
    <errorDisplayField>Call_Back_Date__c</errorDisplayField>
    <errorMessage>Call Back Dates can only be set for Response Type of Follow Up</errorMessage>
</ValidationRule>