News UAT/force-app/main/default/objects/Campaign_Response__c/validationRules/CpgnRes_ResponseSubtype_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>CpgnRes_ResponseSubtype_Required</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL( Response_Subtype__c , &#39;&#39;)</errorConditionFormula>
    <errorDisplayField>Response_Subtype__c</errorDisplayField>
    <errorMessage>Response Subtype is required</errorMessage>
</ValidationRule>