News UAT/force-app/main/default/objects/Campaign_Response__c/validationRules/CpgnRes_ResponseType_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>CpgnRes_ResponseType_Required</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Response_Type__c, &#39;&#39; )</errorConditionFormula>
    <errorDisplayField>Response_Type__c</errorDisplayField>
    <errorMessage>Response Type is required</errorMessage>
</ValidationRule>