News UAT/force-app/main/default/objects/Campaign_Response__c/validationRules/Response_Comment_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Response_Comment_Required</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(Response_Comment__c)</errorConditionFormula>
    <errorDisplayField>Response_Comment__c</errorDisplayField>
    <errorMessage>This field is required</errorMessage>
</ValidationRule>